--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                             <strong>GitHub</strong></h4>
                         <p class="mbr-text mbr-fonts-style mb-2 display-4">
                             yung2415</p>
-                        <h5 class="link mbr-black mbr-fonts-style display-7"><a href="https://github.com/yung2415" class="text-primary" target="_blank">Entry my GitHub</a></h5>
+                        <h5 class="link mbr-black mbr-fonts-style display-7"><a href="https://github.com/yung2415" class="text-primary" target="_blank">Enter my GitHub</a></h5>
                     </div>
                 </div>
             </div>
