--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2021 April Ho - All Rights Reserved
+                    © Copyright 2022 Anthea Ho - All Rights Reserved
                 </p>
             </div>
         </div>
