--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-12 col-md">
                 <div class="text-wrapper">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2">
-                        <strong>Anthea Ho</strong></h1>
+                        <strong>April Ho</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">Welcome to my GitHub page!</p>
                     <div class="mbr-section-btn mt-3"><a class="btn btn-info display-4" href="index.html#features3-y">View works</a>
                         <a class="btn btn-danger display-4" href="index.html#contacts1-10">View code</a></div>
@@ -185,7 +185,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2022 Anthea Ho - All Rights Reserved
+                    © Copyright 2023 April Ho - All Rights Reserved
                 </p>
             </div>
         </div>
